// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> Should match the snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <circle
      cx="17"
      cy="4.54"
      r="2"
    />
    <path
      d="M14 17h-2c0 1.65-1.35 3-3 3s-3-1.35-3-3 1.35-3 3-3v-2c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5zm3-3.5h-1.86l1.67-3.67C17.42 8.5 16.44 7 14.96 7h-5.2c-.81 0-1.54.47-1.87 1.2L7.22 10l1.92.53L9.79 9H12l-1.83 4.1c-.6 1.33.39 2.9 1.85 2.9H17v5h2v-5.5c0-1.1-.9-2-2-2z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 2`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 3`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 4`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="color: tomato; font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 5`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 16px; max-width: 16px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 6`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 7`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 32px; max-width: 32px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 8`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 8px; max-width: 8px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should match the snapshot 9`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-qtm-preloader="icon"
    focusable="false"
    style="font-size: 40px; max-width: 40px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
    />
  </svg>
</div>
`;
